--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <h2>Hình 1</h2>
-<form action="index,html" method="post">
+<form action="index,html" method="post"><fieldset>
 <label for="sothich">Sở thích</label> <br>
     <input name="sothich" type="checkbox" value="Cờ vua">Cờ vua <br>
     <input name="sothich" type="checkbox" value="Trò chơi điện tử ">Trò chơi điện tử <br>
     <input name="sothich" type="checkbox" value="Du lịch ">Du lịch <br>
     <input name="sothich" type="checkbox" value="Cắm hoa ">Cắm hoa <br>
-    <input name="sothich" type="checkbox" value="Nấu ăn">Nấu ăn <br>
+    <input name="sothich" type="checkbox" value="Nấu ăn">Nấu ăn <br></fieldset>
 </form>
 
     
 
 <h2> Hình 2</h2>
-<form action="index.html" method="post">
+<form action="index.html" method="post"><fieldset></fieldset>
     <label for="hoten">Họ và tên:</label><input name="hoten" type="text"> <br>
     <label for="matkhau">Mật khẩu:</label><input type="password" name="matkhau"> <br>
-    <label for="ngaysinh">Ngày sinh:</label><input type="date" name="ngaysinh">
+    <label for="ngaysinh">Ngày sinh:</label><input type="date" name="ngaysinh"></fieldset>
 </form>
 
 
 
 <h2>Hình 3</h2>
-<form action="index.html" method="post">
+<form action="index.html" method="post"><fieldset>
     <label for="dangkyclb">Đăng ký CLB:</label> 
     <select name="dangkyclb" id="dangkyclb">
         <option value="bongda">Bóng đá</option>
@@ -30,25 +30,25 @@
         <option value="caulong">Cầu lông</option>
         <option value="boiloi">Bơi lội</option>
         <option value="vothuat">Võ thuật</option>
-    </select>
+    </select></fieldset>
 </form>
 
 
 
 <h2>Hình 4</h2>
-<form action="index.html" method="post">
+<form action="index.html" method="post"><fieldset>
     <label for="hosodinhkem">Hồ sơ đính kèm</label> <br>
     <input type="button" name="loichao" value="Lời chào"><br>
     <input type="file" name="file"><br>
-    <input type="submit" name="dangky" value="Đăng kí">
+    <input type="submit" name="dangky" value="Đăng kí"></fieldset>
 </form>
 
 
 
 <h2>Hình 5</h2>
-<form action="index.html">
+<form action="index.html"><fieldset>
     <label for="thongtincanhan" style="color: red; font-size: 30px;">Thông tin cá nhân</label> <br>
     <label for="hoten">Họ tên:</label><input type="text" name="hoten" id="hoten"> <br>
     <label for="matkhau">Mật khẩu:</label><input type="password" name="matkhau" id="matkhau"> <br>
-    <label for="diachi">Địa chỉ:</label><textarea name="diachia" id="diachi" rows="4" cols="20">Địa chỉ</textarea>
+    <label for="diachi">Địa chỉ:</label><textarea name="diachia" id="diachi" rows="4" cols="20">Địa chỉ</textarea></fieldset>
 </form>
