--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h2>Hình 1</h2>
-<form action="index,html" method="post"><fieldset>
+<form action="index.html" method="post"><fieldset>
 <label for="sothich">Sở thích</label> <br>
     <input name="sothich" type="checkbox" value="Cờ vua">Cờ vua <br>
     <input name="sothich" type="checkbox" value="Trò chơi điện tử ">Trò chơi điện tử <br>
