--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <h2>Hình 1</h2>
 <form action="index.html" method="post"><fieldset>
 <label for="sothich">Sở thích</label> <br>
-    <input name="sothich" type="checkbox" value="Cờ vua">Cờ vua <br>
-    <input name="sothich" type="checkbox" value="Trò chơi điện tử ">Trò chơi điện tử <br>
-    <input name="sothich" type="checkbox" value="Du lịch ">Du lịch <br>
-    <input name="sothich" type="checkbox" value="Cắm hoa ">Cắm hoa <br>
-    <input name="sothich" type="checkbox" value="Nấu ăn">Nấu ăn <br></fieldset>
+    <input id="sothich" name="sothich" type="checkbox" value="Cờ vua">Cờ vua <br>
+    <input id="sothich" name="sothich" type="checkbox" value="Trò chơi điện tử ">Trò chơi điện tử <br>
+    <input id="sothich" name="sothich" type="checkbox" value="Du lịch ">Du lịch <br>
+    <input id="sothich" name="sothich" type="checkbox" value="Cắm hoa ">Cắm hoa <br>
+    <input id="sothich" name="sothich" type="checkbox" value="Nấu ăn">Nấu ăn <br></fieldset>
 </form>
 
     
 
 <h2> Hình 2</h2>
-<form action="index.html" method="post"><fieldset></fieldset>
-    <label for="hoten">Họ và tên:</label><input name="hoten" type="text"> <br>
-    <label for="matkhau">Mật khẩu:</label><input type="password" name="matkhau"> <br>
-    <label for="ngaysinh">Ngày sinh:</label><input type="date" name="ngaysinh"></fieldset>
+<form action="index.html" method="post"><fieldset>
+    <label for="hoten">Họ và tên:</label><input name="hoten" type="text" id="hoten"> <br>
+    <label for="matkhau">Mật khẩu:</label><input type="password" id="matkhau" name="matkhau"> <br>
+    <label for="ngaysinh">Ngày sinh:</label><input type="date" id="ngaysinh" name="ngaysinh"></fieldset>
 </form>
 
 
@@ -38,9 +38,9 @@
 <h2>Hình 4</h2>
 <form action="index.html" method="post"><fieldset>
     <label for="hosodinhkem">Hồ sơ đính kèm</label> <br>
-    <input type="button" name="loichao" value="Lời chào"><br>
-    <input type="file" name="file"><br>
-    <input type="submit" name="dangky" value="Đăng kí"></fieldset>
+    <input id="hosodinhkem" type="button" name="loichao" value="Lời chào"><br>
+    <input id="hosodinhkem" type="file" name="file"><br>
+    <input id="hosodinhkem" type="submit" name="dangky" value="Đăng kí"></fieldset>
 </form>
 
 
