--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <h2>Hình 1</h2>
 <form action="index.html" method="post"><fieldset>
-<label for="sothich">Sở thích</label> <br>
-    <input id="sothich" name="sothich" type="checkbox" value="Cờ vua">Cờ vua <br>
-    <input id="sothich" name="sothich" type="checkbox" value="Trò chơi điện tử ">Trò chơi điện tử <br>
-    <input id="sothich" name="sothich" type="checkbox" value="Du lịch ">Du lịch <br>
-    <input id="sothich" name="sothich" type="checkbox" value="Cắm hoa ">Cắm hoa <br>
-    <input id="sothich" name="sothich" type="checkbox" value="Nấu ăn">Nấu ăn <br></fieldset>
+<label>Sở thích</label> <br>
+    <input id="sothich1" name="sothich" type="checkbox" value="Cờ vua"> <label for="sothich1">Cờ vua</label> <br>
+    <input id="sothich2" name="sothich" type="checkbox" value="Trò chơi điện tử "><label for="sothich2">Trò chơi điện tử</label><br>
+    <input id="sothich3" name="sothich" type="checkbox" value="Du lịch "><label for="sothich3">Du lịch</label><br>
+    <input id="sothich4" name="sothich" type="checkbox" value="Cắm hoa "><label for="sothich4">Cắm hoa</label><br>
+    <input id="sothich5" name="sothich" type="checkbox" value="Nấu ăn"><label for="sothich5">Nấu ăn</label><br></fieldset>
 </form>
 
     
@@ -37,10 +37,10 @@
 
 <h2>Hình 4</h2>
 <form action="index.html" method="post"><fieldset>
-    <label for="hosodinhkem">Hồ sơ đính kèm</label> <br>
-    <input id="hosodinhkem" type="button" name="loichao" value="Lời chào"><br>
+    <label >Hồ sơ đính kèm</label> <br>
+    <input id="loichao" type="button" name="loichao" value="Lời chào"><br>
     <input id="hosodinhkem" type="file" name="file"><br>
-    <input id="hosodinhkem" type="submit" name="dangky" value="Đăng kí"></fieldset>
+    <input id="dangki" type="submit" name="dangky" value="Đăng kí"></fieldset>
 </form>
 
 
